# flowguard-ids

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  requirements.txt  setup.py
autoresearch/: analysis.ipynb  prepare.py  program.md  pyproject.toml  train.py
autoresearch/flowguard-ids/: README.md
autoresearch/flowguard-ids/configs/: default.yaml  experiment_cnn_bilstm_se.yaml  unsw_nb15.yaml
autoresearch/flowguard-ids/docs/: NIDS_Technical_Design.md
autoresearch/flowguard-ids/nids/: config.py
autoresearch/flowguard-ids/nids/evaluation/: __init__.py  latency.py
autoresearch/flowguard-ids/nids/features/: __init__.py  importance.py  shap_analysis.py
autoresearch/flowguard-ids/nids/models/: base.py  classical.py  cnn_bilstm.py  cnn_bilstm_attention.py  cnn_bilstm_se.py  registry.py
autoresearch/flowguard-ids/nids/training/: optimizers.py
autoresearch/flowguard-ids/nids/utils/: __init__.py  io.py  logging.py  process.py  visualization.py
autoresearch/flowguard-ids/scripts/: evaluate.py  export_model.py  feature_selection.py  preprocess.py  preprocess_cross_dataset.py  shap_analysis.py  train_lightweight.py
autoresearch/flowguard-ids/tests/: test_data.py  test_training.py
configs/: cicids2017.yaml  cross_dataset.yaml  default.yaml  experiment_cnn_bilstm_se.yaml  same_dataset.yaml  unsw_nb15.yaml
docs/: API_Reference.md  NIDS_Technical_Design.md  goal.md
nids/: __init__.py  config.py
scripts/: bench_model_size.py  export_paper_results.py  md_to_word.py  run_experiments.py  train.py  train_lightweight.py
(+34 files in other folders)
